--- a/css.html
+++ b/css.html
@@ -6,10 +6,14 @@
 <body>
 	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
 	<style type="text/css">
+		body{
+			background-color: black;
+		}
 		.s{
 			background-color: yellow;
 			}
 			h1{
+				text-align: center;
 				color: green;
 				font-family: Lobster, monospace;
 			}
@@ -23,9 +27,9 @@
 		}
 	</style>
 <main>
-	<h1 class="s">Sport</h1>
-	<p class="s">Sport pertains to any form of competitive physical activity or game that aims to use, maintain or improve physical ability and skills while providing enjoyment to participants and, in some cases, entertainment to spectators. Sports can, through casual or organized participation, improve one's physical health. Hundreds of sports exist, from those between single contestants, through to those with hundreds of simultaneous participants, either in teams or competing as individuals. In certain sports such as racing, many contestants may compete, simultaneously or consecutively, with one winner; in others, the contest (a match) is between two sides, each attempting to exceed the other. Some sports allow a "tie" or "draw", in which there is no single winner; others provide tie-breaking methods to ensure one winner and one loser. A number of contests may be arranged in a tournament producing a champion. Many sports leagues make an annual champion by arranging games in a regular sports season, followed in some cases by playoffs.</p>
-	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGJL72sILHHRK8b231Gfvx6ywm_GOEf-XVnS8DbrZgZ2--eUOeex3IBkhTfDDT-4xIM1A&usqp=CAU" alt="Image of a tiger" class="ima">
+	<div class="s"><h1>Sport</h1></div>
+	<div class="s"><p>Sport pertains to any form of competitive physical activity or game that aims to use, maintain or improve physical ability and skills while providing enjoyment to participants and, in some cases, entertainment to spectators. Sports can, through casual or organized participation, improve one's physical health. Hundreds of sports exist, from those between single contestants, through to those with hundreds of simultaneous participants, either in teams or competing as individuals. In certain sports such as racing, many contestants may compete, simultaneously or consecutively, with one winner; in others, the contest (a match) is between two sides, each attempting to exceed the other. Some sports allow a "tie" or "draw", in which there is no single winner; others provide tie-breaking methods to ensure one winner and one loser. A number of contests may be arranged in a tournament producing a champion. Many sports leagues make an annual champion by arranging games in a regular sports season, followed in some cases by playoffs.</p></div>
+	<div class="ima"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGJL72sILHHRK8b231Gfvx6ywm_GOEf-XVnS8DbrZgZ2--eUOeex3IBkhTfDDT-4xIM1A&usqp=CAU" alt="Image of a tiger"></div>
 </main>
 </body>
 </html>
